# auto-commenting-agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/brand/: context.py  detectors.py  service.py  validators.py
app/core/: config.py  database.py  enums.py  exceptions.py  locks.py  logging.py  router.py  state_machine.py
app/feedback/: models.py  router.py  service.py
app/generation/: llm_client.py  models.py  prompts.py  router.py  service.py  worker.py
app/posting/: client.py  idempotency.py  models.py  retry.py  router.py  service.py
app/posts/: models.py  router.py  rules.py  schemas.py  service.py  targeting.py
app/review/: models.py  router.py  schemas.py  service.py
app/workflows/: post_pipeline.py
docs/: architecture.md  assumptions.md  safeguards.md  scaling.md  state-machine.md
scripts/: seed_demo_data.py  simulate_failures.py
tests/: test_generation.py  test_kill_switch.py  test_posting_idempotency.py
